Initial commit of Express with Swagger router
