# src/management/controller/SitesController.js
@@ -1,0 +1,13 @@
+module.exports = () => {
+    return {
+/*
+        getAvailableSites(req, res) {
+            res.status(200).send("Hello, world!");
+        },
+
+        getSite(req, res) {
+            res.status(501).send('Not implemented yet!');
+        }
+*/
+    }
+};
